[package]
name = "courier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
bevy = "0.12.1"
bevy_atmosphere = "0.8.1"
bevy_fps_controller = "0.2.4"
bevy_rapier3d = "0.23.0"
rand = "0.8.4"
