[package]
name = "courier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
bevy = {version = "0.13.0", features = [ "wav"]}
bevy_atmosphere = "0.9.0"
bevy_fps_controller = "0.2.5"
bevy_rapier3d = "0.25.0"
rand = "0.8.4"
bevy_asset_loader = "0.20.0"
bevy_framepace = "0.15.0"
